force-app/main/default/objects/Apttus_Config2__FavoriteConfiguration__c/Apttus_Config2__FavoriteConfiguration__c.object-meta.xml
<CustomObject>
    <label>Favorite Configuration</label>
    <nameField>
        <label>Favorite Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>