force-app/main/default/objects/Apttus_Config2__FavoriteConfiguration__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Represent whether the favorite configuration is active. Inactive favorite configuration will not be shown on the catalog page.</description>
    <inlineHelpText>Represent whether the favorite configuration is active. Inactive favorite configuration will not be shown on the catalog page.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>