force-app/main/default/objects/Apttus_Config2__FavoriteConfiguration__c/fields/Apttus_Config2__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Product Configuration which contains line items of favorite configuration.</description>
    <label>Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Favorite Configurations</relationshipLabel>
    <relationshipName>FavoriteConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>