force-app/main/default/objects/Apttus_Config2__FavoriteConfiguration__c/fields/Apttus_Config2__LastUsedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LastUsedDate__c</fullName>
    <description>The date and time when the favorite config was last used</description>
    <inlineHelpText>The date and time when the favorite config was last used</inlineHelpText>
    <label>Last Used Date</label>
    <type>DateTime</type>
</CustomField>