force-app/main/default/objects/Apttus_Config2__FavoriteConfiguration__c/fields/Apttus_Config2__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ID of the price list associated with the configuration</description>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Favorite Configurations</relationshipLabel>
    <relationshipName>FavoriteConfigurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>