force-app/main/default/objects/Apttus_Config2__FavoriteConfiguration__c/fields/Apttus_Config2__Scope__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Scope__c</fullName>
    <description>Visibility scope of the favorite configuration</description>
    <inlineHelpText>Visibility scope of the favorite configuration</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>